--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
+pickle
+gzip
+urllib
 streamlit==1.33.0
 deepchem==2.8.0
 rdkit==2023.9.4
 stmol==0.0.9
 matplotlib==3.7.2
-urllib==1.26.18
 py3Dmol==2.1.0
-pickle
-gzi
 streamlit_option_menu==0.3.12
 pandas==2.2.1
